cluster/manifest/base/portfolio/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: portfolio
  namespace: default
  labels:
    app: portfolio

spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  strategy: {}
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - image: ghcr.io/kaichevannes/portfolio:0c01957e01dbcf1100f3e44a92d0b6df8dbc5258
        name: portfolio
        ports:
          - name: web
            containerPort: 3000
