cluster/manifest/base/portfolio/services.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio

spec:
  ports:
    - name: web
      port: 3000
      targetPort: web

  selector:
    app: portfolio
