cluster/manifest/base/portfolio/ingress.yml
apiVersion: traefik.io/v1alpha
kind: IngressRoute
metadata:
  name: portfolio-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kaichevannes.com`)
    kind: Rule
    services:
    - name: portfolio
      port: 3000
  tls:
    certResolver: myresolver
